# mmm-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  research_mmm_agent.md
examples/: full_workflow_example.py  run_demo.py
src/mmm_agent/: __init__.py  config.py  state.py  workflow.py
src/mmm_agent/agents/: __init__.py  eda.py  eda_agent.py  interpretation.py  modeling.py  modeling_agent.py  planning.py  research_agent.py  state.py  whatif_agent.py
src/mmm_agent/api/: main.py
src/mmm_agent/data/: __init__.py  sample_generator.py
src/mmm_agent/db/: graphrag.py  neo4j_client.py
src/mmm_agent/scripts/: init_db.py
src/mmm_agent/tools/: __init__.py  code_executor.py  data_harmonizer.py  rag_context.py  web_search.py
tests/: __init__.py  test_workflow.py
