[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmm-agent"
version = "0.1.0"
description = "Agentic Marketing Mix Modeling Framework - AI-powered MMM analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MMM Agent Team" }
]
keywords = [
    "marketing-mix-modeling",
    "mmm",
    "bayesian",
    "langchain",
    "langgraph",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core LLM Framework
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    
    # LLM Providers (optional - installed based on use)
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",  # Excel support
    "pyarrow>=14.0.0",  # Parquet support
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Statistics & ML
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    
    # Web Search
    "duckduckgo-search>=6.0.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# Full Bayesian MMM support
bayesian = [
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "pymc-marketing>=0.5.0",
]

# RAG with vector store
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

# Knowledge graph
graph = [
    "neo4j>=5.0.0",
]

# API server
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# All optional dependencies
all = [
    "mmm-agent[bayesian,rag,graph,api,dev]",
]

[project.scripts]
mmm-agent = "mmm_agent.workflow:main"

[project.urls]
Homepage = "https://github.com/your-org/mmm-agent"
Documentation = "https://github.com/your-org/mmm-agent#readme"
Repository = "https://github.com/your-org/mmm-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/mmm_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
