[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmm-agent"
version = "0.1.0"
description = "Four-workflow MMM Agent System with GraphRAG and Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MMM Agent Team" }
]
keywords = [
    "marketing-mix-modeling",
    "mmm",
    "langchain",
    "langgraph",
    "neo4j",
    "ollama",
    "graphrag",
]

dependencies = [
    # Core LLM Framework
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    # Graph Database
    "neo4j>=5.0.0",
    "langchain-neo4j>=0.1.0",
    # Vector Store
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Statistics & ML
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    # Bayesian MMM
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "pymc-marketing>=0.5.0",
    # Web Search
    "duckduckgo-search>=6.0.0",
    "crawl4ai>=0.3.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "websockets>=12.0",
    # Redis for pub/sub
    "redis>=5.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "langgraph-checkpoint-postgres>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
mmm-api = "mmm_agent.api.main:main"
mmm-init-db = "mmm_agent.scripts.init_db:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mmm_agent"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
